--- a/dconf.ini
+++ b/dconf.ini
@@ -52,17 +52,13 @@ sleep-inactive-ac-type='nothing'
 sleep-inactive-battery-type='nothing'
 
 [org/gnome/settings-daemon/plugins/xsettings]
-hinting='slight'
+hinting='full'
 
 [org/gnome/shell/extensions/dash-to-dock]
 dock-fixed=true
 dock-position='BOTTOM'
 multi-monitor=false
 preferred-monitor=0
-
-[org/gnome/shell/extensions/desktop-icons]
-show-home=false
-show-trash=false
 
 [org/gnome/system/location]
 enabled=false
@@ -71,7 +67,7 @@ enabled=false
 background-color='rgb(0,0,0)'
 default-size-columns=160
 default-size-rows=50
-font='JetBrains Mono Bold 12'
+font='JetBrains Mono 12'
 foreground-color='rgb(0,255,0)'
 palette=['rgb(0,0,0)', 'rgb(255,0,0)', 'rgb(0,255,0)', 'rgb(255,255,0)', 'rgb(0,0,255)', 'rgb(255,0,255)', 'rgb(0,255,255)', 'rgb(255,255,255)', 'rgb(64,64,64)', 'rgb(255,0,0)', 'rgb(0,255,0)', 'rgb(255,255,0)', 'rgb(0,0,255)', 'rgb(255,0,255)', 'rgb(0,255,255)', 'rgb(255,255,255)']
 scrollback-unlimited=true
