Update dconf config

--- a/dconf.ini
+++ b/dconf.ini
@@ -1,9 +1,48 @@
+[org/gnome/Weather]
+locations=[<(uint32 2, <('London', 'EGWU', true, [(0.89971722940307675, -0.007272211034407213)], [(0.89884456477707964, -0.0020362232784242244)])>)>]
+
+[org/gnome/calendar]
+active-view='month'
+window-maximized=false
+window-size=(768, 600)
+
+[org/gnome/clocks]
+world-clocks=[{'location': <(uint32 2, <('New York', 'KNYC', true, [(0.71180344078725644, -1.2909618758762367)], [(0.71059804659265924, -1.2916478949920254)])>)>}, {'location': <(uint32 2, <('Nairobi', 'HKJK', true, [(-0.022980174302356177, 0.6443173880123374)], [(-0.022398386249496388, 0.64257205876034318)])>)>}]
+
+[org/gnome/desktop/a11y/applications]
+screen-keyboard-enabled=false
+
+[org/gnome/desktop/datetime]
+automatic-timezone=true
+
+[org/gnome/desktop/input-sources]
+current=uint32 0
+sources=[('xkb', 'us')]
+xkb-options=@as []
+
+[org/gnome/desktop/interface]
+clock-show-weekday=true
+color-scheme='prefer-dark'
+document-font-name='Cantarell 11'
+enable-animations=true
+font-antialiasing='rgba'
+font-hinting='full'
+font-name='Cantarell 11'
+monospace-font-name='JetBrains Mono 10'
+show-battery-percentage=true
+text-scaling-factor=1.0
+toolkit-accessibility=false
+
 [org/gnome/desktop/peripherals/mouse]
-natural-scroll=true
+natural-scroll=false
+speed=-0.76521739130434785
 
 [org/gnome/desktop/peripherals/touchpad]
 click-method='fingers'
+edge-scrolling-enabled=false
 send-events='enabled'
+speed=0.069767441860465018
+tap-to-click=true
 two-finger-scrolling-enabled=true
 
 [org/gnome/desktop/privacy]
@@ -18,6 +57,7 @@ idle-delay=uint32 300
 
 [org/gnome/desktop/sound]
 allow-volume-above-100-percent=false
+event-sounds=true
 
 [org/gnome/desktop/wm/keybindings]
 switch-applications=['<Alt>Tab']
@@ -28,7 +68,9 @@ switch-to-workspace-down=['<Primary><Alt>Down']
 switch-to-workspace-up=['<Primary><Alt>Up']
 
 [org/gnome/desktop/wm/preferences]
+action-middle-click-titlebar='none'
 auto-raise=true
+button-layout='close,minimize,maximize:appmenu'
 
 [org/gnome/eog/view]
 background-color='rgb(0,0,0)'
@@ -42,6 +84,9 @@ default-folder-viewer='icon-view'
 search-filter-time-type='last_modified'
 search-view='list-view'
 
+[org/gnome/settings-daemon/plugins/color]
+night-light-enabled=false
+
 [org/gnome/settings-daemon/plugins/media-keys]
 home=['<Super>e']
 
@@ -51,14 +96,52 @@ sleep-inactive-ac-timeout=3600
 sleep-inactive-ac-type='nothing'
 sleep-inactive-battery-type='nothing'
 
-[org/gnome/settings-daemon/plugins/xsettings]
-hinting='full'
+[org/gnome/shell/extensions/blur-my-shell]
+brightness=0.46999999999999997
+hacks-level=1
+noise-amount=0.0
+noise-lightness=0.0
+sigma=86
+
+[org/gnome/shell/extensions/blur-my-shell/hidetopbar]
+compatibility=false
+
+[org/gnome/shell/extensions/blur-my-shell/overview]
+blur=true
+style-components=1
+
+[org/gnome/shell/extensions/blur-my-shell/panel]
+blur=true
+customize=false
+unblur-in-overview=true
 
 [org/gnome/shell/extensions/dash-to-dock]
-dock-fixed=true
+apply-custom-theme=false
+background-opacity=0.80000000000000004
+custom-theme-shrink=true
+dash-max-icon-size=38
+disable-overview-on-startup=true
+dock-fixed=false
 dock-position='BOTTOM'
+extend-height=false
+height-fraction=0.90000000000000002
+intellihide-mode='ALL_WINDOWS'
 multi-monitor=false
-preferred-monitor=0
+preferred-monitor=-2
+preferred-monitor-by-connector='DP-1'
+preview-size-scale=0.40000000000000002
+running-indicator-style='DOTS'
+
+[org/gnome/shell/extensions/desktop-icons]
+show-home=false
+show-trash=false
+
+[org/gnome/shell/weather]
+automatic-location=true
+locations=[<(uint32 2, <('London', 'EGWU', true, [(0.89971722940307675, -0.007272211034407213)], [(0.89884456477707964, -0.0020362232784242244)])>)>]
+
+[org/gnome/shell/world-clocks]
+locations=[<(uint32 2, <('New York', 'KNYC', true, [(0.71180344078725644, -1.2909618758762367)], [(0.71059804659265924, -1.2916478949920254)])>)>, <(uint32 2, <('Nairobi', 'HKJK', true, [(-0.022980174302356177, 0.6443173880123374)], [(-0.022398386249496388, 0.64257205876034318)])>)>]
 
 [org/gnome/system/location]
 enabled=false
@@ -71,6 +154,7 @@ font='JetBrains Mono 12'
 foreground-color='rgb(0,255,0)'
 palette=['rgb(0,0,0)', 'rgb(255,0,0)', 'rgb(0,255,0)', 'rgb(255,255,0)', 'rgb(0,0,255)', 'rgb(255,0,255)', 'rgb(0,255,255)', 'rgb(255,255,255)', 'rgb(64,64,64)', 'rgb(255,0,0)', 'rgb(0,255,0)', 'rgb(255,255,0)', 'rgb(0,0,255)', 'rgb(255,0,255)', 'rgb(0,255,255)', 'rgb(255,255,255)']
 scrollback-unlimited=true
+scrollbar-policy='never'
 use-system-font=false
 use-theme-colors=false
 
