--- a/dot_config/starship.toml
+++ b/dot_config/starship.toml
@@ -18,3 +18,16 @@ format = "[$path]($style)[$read_only]($read_only_style)"
 
 [hostname]
 format = "[$ssh_symbol$hostname]($style) "
+
+[git_status]
+format = '([\[$all_status$ahead_behind\]]($style) )'
+conflicted = "💥"
+ahead = "⬆️${count}"
+behind = "⬇️${count}"
+diverged = "🔀"
+untracked = "🆕"
+stashed = "📦"
+modified = "✏️"
+staged = "✅"
+renamed = "🔁"
+deleted = "🗑️"
